--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 <div class="stat-card">
                     <div class="stat-title">Total de Vendas</div>
                     <div class="stat-value" id="totalVendasDash">R$ 0,00</div>
-                    <div class="stat-change positive">
-                        <span>↑ 12%</span>
+                    <div class="stat-change positive" id="evolucaoVendas">
+                        <span>↑ 0%</span>
                         <span>vs. último mês</span>
                     </div>
                 </div>
@@ -56,7 +56,7 @@
                     <div class="stat-title">Comissões</div>
                     <div class="stat-value" id="totalComissoesDash">R$ 0,00</div>
                     <div class="stat-change positive">
-                        <span>↑ 8%</span>
+                        <span>↑ 0%</span>
                         <span>vs. último mês</span>
                     </div>
                 </div>
