--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <select id="anoFiltro" onchange="atualizarDashboard()">
                     <!-- Os anos serão preenchidos dinamicamente via JavaScript -->
                 </select>
+                <button class="btn btn-primary" onclick="atualizarDashboard()">Atualizar</button>
             </div>
 
             <div class="stats-grid">
