--- a/index.html
+++ b/index.html
@@ -298,7 +298,6 @@
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title">Listagem de Vendas</h2>
-                    <button class="btn btn-primary" onclick="listarVendas()">Listar Vendas</button>
                 </div>
                 <div class="card-body">
                     <div class="filters">
@@ -309,6 +308,13 @@
                         <div class="form-group">
                             <label class="form-label">Data Final</label>
                             <input type="text" id="filtroDataFinal" class="form-input" placeholder="DD/MM/AAAA" maxlength="10" oninput="formatarDataInput(this)">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label">Vendedor</label>
+                            <select id="filtroVendedorVendas" class="form-select">
+                                <option value="">Todos</option>
+                                <!-- As opções serão preenchidas dinamicamente via JavaScript -->
+                            </select>
                         </div>
                         <button class="btn btn-primary" onclick="filtrarVendas()">Filtrar</button>
                     </div>
