--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title">Listagem de Vendas</h2>
+                    <button class="btn btn-primary" onclick="listarVendas()">Listar Vendas</button>
                 </div>
                 <div class="card-body">
                     <div class="filters">
@@ -308,13 +309,6 @@
                         <div class="form-group">
                             <label class="form-label">Data Final</label>
                             <input type="text" id="filtroDataFinal" class="form-input" placeholder="DD/MM/AAAA" maxlength="10" oninput="formatarDataInput(this)">
-                        </div>
-                        <div class="form-group">
-                            <label class="form-label">Vendedor</label>
-                            <select id="filtroVendedorVendas" class="form-select">
-                                <option value="">Todos</option>
-                                <!-- As opções serão preenchidas dinamicamente via JavaScript -->
-                            </select>
                         </div>
                         <button class="btn btn-primary" onclick="filtrarVendas()">Filtrar</button>
                     </div>
@@ -387,7 +381,7 @@
                                 <option value="nomeCliente" selected>Nome do Cliente</option>
                                 <option value="empresaParceira" selected>Empresa Parceira</option>
                                 <option value="comissao" selected>Valor da Comissão</option>
-                                <option value="percentualComissao" selected>Variável da Comissão</option>
+                                <option value="percentualComissao" selected>Percentual da Comissão</option>
                                 <option value="valorBrutoReceber" selected>Valor Bruto a Receber</option>
                             </select>
                         </div>
