--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                                 <option value="nomeCliente" selected>Nome do Cliente</option>
                                 <option value="empresaParceira" selected>Empresa Parceira</option>
                                 <option value="comissao" selected>Valor da Comissão</option>
-                                <option value="percentualComissao" selected>Percentual da Comissão</option>
+                                <option value="percentualComissao" selected>Variável da Comissão</option>
                                 <option value="valorBrutoReceber" selected>Valor Bruto a Receber</option>
                             </select>
                         </div>
