--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                         <input type="color" id="corSecundaria" value="#64748b" onchange="atualizarTema()">
                     </div>
                     <button class="btn btn-secondary" onclick="restaurarTemaPadrao()">Restaurar Cores Padrão</button>
+                                            <button class="btn btn-primary" onclick="salvarCores()">Salvar</button>
                 </div>
             </div>
         </div>
