--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     </div>
                     <div class="form-group">
                         <label class="form-label">Cor Secundária</label>
-                        <input type="color" id="corSecundaria" value="#64748b" onchange="atualizarTema()">
+                        <input type="color" id="corSecundaria" value="#ebebeb" onchange="atualizarTema()">
                     </div>
                     <button class="btn btn-secondary" onclick="restaurarTemaPadrao()">Restaurar Cores Padrão</button>
                                             <button class="btn btn-primary" onclick="salvarCores()">Salvar</button>
