--- a/index.html
+++ b/index.html
@@ -311,6 +311,10 @@
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title">Listagem de Vendas</h2>
+                    <div>
+                        <button class="btn btn-secondary" onclick="exportarVendasExcel()">Exportar Excel</button>
+                        <button class="btn btn-secondary" onclick="exportarVendasPDF()">Exportar PDF</button>
+                    </div>
                 </div>
                 <div class="card-body">
                     <div class="filters">
