--- a/index.html
+++ b/index.html
@@ -408,6 +408,10 @@
                             </select>
                         </div>
                         <div class="form-group">
+                            <label class="form-label">Valor da Venda</label>
+                            <input type="text" id="filtroValorVenda" class="form-input" placeholder="R$ 0,00" oninput="formatarMoeda(this)">
+                        </div>
+                        <div class="form-group">
                             <label class="form-label">Colunas</label>
                             <small class="form-text">(Pressione Ctrl para selecionar mais de um item)</small>
                             <select id="filtroColunas" class="form-select" multiple>
@@ -420,6 +424,7 @@
                                 <option value="comissao" selected>Valor da Comissão</option>
                                 <option value="percentualComissao" selected>Variável da Comissão</option>
                                 <option value="valorBrutoReceber" selected>Valor Bruto a Receber</option>
+                                <option value="valorVenda" selected>Valor da Venda</option>
                             </select>
                         </div>
                         <button class="btn btn-primary" onclick="filtrarRelatorio()">Gerar</button>
